test/errors/class_in_block.correct
error: class_in_block.li:2:11: class 'NestedClass' must be declared at global scope
│ class NestedClass {
│ ~~~~~~~~~~~~~~~~~~~
│       ^
